홈 화면 업데이트

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -80,10 +80,44 @@
         android:src="@drawable/img_album_exp"
         android:layout_marginStart="20dp"
         android:layout_marginBottom="30dp"
-        app:layout_constraintEnd_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="@id/home_pannel_background_iv"/>
 
+    <TextView
+        android:id="@+id/home_pannel_album_info_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="총 36곡 2020.06.05"
+        android:textColor="@color/white"
+        android:textSize="12sp"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="12dp"
+        app:layout_constraintBottom_toTopOf="@id/home_pannel_album_img_iv"
+        app:layout_constraintStart_toStartOf="parent"/>
 
+    <TextView
+        android:id="@+id/home_pannel_album_title_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="In My Bed"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:layout_marginStart="15dp"
+        app:layout_constraintStart_toEndOf="@id/home_pannel_album_img_iv"
+        app:layout_constraintBottom_toTopOf="@id/home_pannel_album_singer_tv"
+        app:layout_constraintTop_toTopOf="@id/home_pannel_album_img_iv"/>
+
+    <TextView
+        android:id="@+id/home_pannel_album_singer_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="bear"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:layout_marginStart="15dp"
+        app:layout_constraintStart_toEndOf="@id/home_pannel_album_img_iv"
+        app:layout_constraintTop_toBottomOf="@id/home_pannel_album_title_tv"
+        app:layout_constraintBottom_toBottomOf="@id/home_pannel_album_img_iv"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
