--- a/app/src/main/res/layout/fragment_album.xml
+++ b/app/src/main/res/layout/fragment_album.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -180,13 +181,24 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/album_songs_toggle_iv"
+            android:id="@+id/album_songs_toggle_off_iv"
             android:layout_width="50dp"
             android:layout_height="28dp"
             android:src="@drawable/btn_toggle_off"
             app:layout_constraintTop_toTopOf="@id/album_songs_favorite_tv"
             app:layout_constraintStart_toEndOf="@+id/album_songs_favorite_tv"
             app:layout_constraintBottom_toBottomOf="@id/album_songs_favorite_tv" />
+
+        <ImageView
+            android:id="@+id/album_songs_toggle_on_iv"
+            android:layout_width="50dp"
+            android:layout_height="28dp"
+            android:src="@drawable/btn_toggle_on"
+            android:visibility="gone"
+            app:layout_constraintTop_toTopOf="@id/album_songs_favorite_tv"
+            app:layout_constraintStart_toEndOf="@+id/album_songs_favorite_tv"
+            app:layout_constraintBottom_toBottomOf="@id/album_songs_favorite_tv"/>
+
 
     </LinearLayout>
 
