--- a/app/src/main/res/layout/fragment_look.xml
+++ b/app/src/main/res/layout/fragment_look.xml
@@ -157,7 +157,7 @@
                 android:id="@+id/look_chart_title_time_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="19시 기준"
+                android:text="22시 기준"
                 android:textSize="12sp"
                 android:layout_marginStart="5dp"
                 app:layout_constraintStart_toEndOf="@+id/look_chart_title_tv"
@@ -169,6 +169,7 @@
                 android:layout_height="wrap_content"
                 android:text="최근 24시간 집계,FLO 최고 인기곡 차트!"
                 android:textSize="12sp"
+                android:layout_marginTop="5dp"
                 android:layout_marginStart="15dp"
                 app:layout_constraintTop_toBottomOf="@+id/look_chart_title_tv"
                 app:layout_constraintStart_toStartOf="parent"/>
@@ -240,7 +241,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="15dp"
-                        android:text="잠이 안온다"
+                        android:text="Stay (Explicit Ver.)"
+                        android:textSize="15sp"
+                        android:textColor="@color/black"
                         app:layout_constraintStart_toEndOf="@+id/look_chart_1st_order"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -248,7 +251,7 @@
                         android:id="@+id/look_chart_1st_singer"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="젠(zen)"
+                        android:text="The Kid LAROI &amp; Justin Bieber"
                         app:layout_constraintStart_toStartOf="@+id/look_chart_1st_title"
                         app:layout_constraintTop_toBottomOf="@+id/look_chart_1st_title" />
 
@@ -291,7 +294,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="15dp"
-                        android:text="잠이 안온다"
+                        android:text="신호등"
+                        android:textSize="15sp"
+                        android:textColor="@color/black"
                         app:layout_constraintStart_toEndOf="@+id/look_chart_2st_order"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -299,7 +304,7 @@
                         android:id="@+id/look_chart_2st_singer"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="젠(zen)"
+                        android:text="이무진"
                         app:layout_constraintStart_toStartOf="@+id/look_chart_2st_title"
                         app:layout_constraintTop_toBottomOf="@+id/look_chart_2st_title" />
 
@@ -342,7 +347,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="15dp"
-                        android:text="잠이 안온다"
+                        android:text="바라만 본다"
+                        android:textSize="15sp"
+                        android:textColor="@color/black"
                         app:layout_constraintStart_toEndOf="@+id/look_chart_3st_order"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -350,7 +357,7 @@
                         android:id="@+id/look_chart_3st_singer"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="젠(zen)"
+                        android:text="MSG워너비 (M.O.M)"
                         app:layout_constraintStart_toStartOf="@+id/look_chart_3st_title"
                         app:layout_constraintTop_toBottomOf="@+id/look_chart_3st_title" />
 
@@ -370,7 +377,7 @@
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_marginStart="15dp"
-                        android:src="@drawable/img_album_exp2"
+                        android:src="@drawable/img_album_exp3"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -393,7 +400,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="15dp"
-                        android:text="잠이 안온다"
+                        android:text="Next Level"
+                        android:textSize="15sp"
+                        android:textColor="@color/black"
                         app:layout_constraintStart_toEndOf="@+id/look_chart_4st_order"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -401,7 +410,7 @@
                         android:id="@+id/look_chart_4st_singer"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="젠(zen)"
+                        android:text="easpa"
                         app:layout_constraintStart_toStartOf="@+id/look_chart_4st_title"
                         app:layout_constraintTop_toBottomOf="@+id/look_chart_4st_title" />
 
@@ -444,7 +453,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="15dp"
-                        android:text="잠이 안온다"
+                        android:text="Permission to Dance"
+                        android:textSize="15sp"
+                        android:textColor="@color/black"
                         app:layout_constraintStart_toEndOf="@+id/look_chart_5st_order"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -452,7 +463,7 @@
                         android:id="@+id/look_chart_5st_singer"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="젠(zen)"
+                        android:text="방탄소년단"
                         app:layout_constraintStart_toStartOf="@+id/look_chart_5st_title"
                         app:layout_constraintTop_toBottomOf="@+id/look_chart_5st_title" />
 
@@ -486,9 +497,9 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:src="@drawable/img_video_exp"
-            android:scaleType="fitStart"
+            android:adjustViewBounds="true"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:layout_marginTop="20dp"
