--- a/app/src/main/res/layout/fragment_songfile.xml
+++ b/app/src/main/res/layout/fragment_songfile.xml
@@ -1,22 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:id="@+id/search_tv"
+        android:id="@+id/songfile_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="검색"
-        android:textColor="@color/black"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        android:layout_marginTop="40dp"
-        android:layout_marginStart="20dp"
+        android:text="보관한 음악 파일이 없습니다"
+        android:textSize="20sp"
+        android:textColor="@color/gray_color"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
