--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,15 +9,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/home_pannel_background_iv"
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/home_pannel_01_vp"
             android:layout_width="match_parent"
             android:layout_height="430dp"
-            android:src="@drawable/img_first_album_default"
-            android:scaleType="centerCrop"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/home_pannel_btn_nugu_iv"
@@ -50,110 +49,6 @@
             app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
-            android:id="@+id/home_pannel_title_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="포근하게 덮어주는 꿈의 \n목소리"
-            android:textColor="@color/white"
-            android:textSize="28sp"
-            android:textStyle="bold"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="15dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/home_pannel_btn_nugu_iv"/>
-
-        <ImageView
-            android:id="@+id/home_pannel_btn_play_iv"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:src="@drawable/btn_panel_play_large"
-            android:layout_marginEnd="20dp"
-            android:layout_marginStart="20dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/home_pannel_title_tv"
-            app:layout_constraintTop_toBottomOf="@+id/home_pannel_title_tv"/>
-
-        <ImageView
-            android:id="@+id/home_pannel_album_img_01_iv"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/img_album_exp"
-            android:layout_marginStart="20dp"
-            android:layout_marginBottom="30dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/home_pannel_album_img_02_iv"/>
-
-        <TextView
-            android:id="@+id/home_pannel_album_info_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="총 15곡 2019.11.11"
-            android:textColor="@color/white"
-            android:textSize="12sp"
-            android:layout_marginStart="20dp"
-            android:layout_marginBottom="12dp"
-            app:layout_constraintBottom_toTopOf="@id/home_pannel_album_img_01_iv"
-            app:layout_constraintStart_toStartOf="parent"/>
-
-        <TextView
-            android:id="@+id/home_pannel_album_title_01_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="잠이 안온다"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:layout_marginStart="15dp"
-            app:layout_constraintStart_toEndOf="@id/home_pannel_album_img_01_iv"
-            app:layout_constraintBottom_toTopOf="@id/home_pannel_album_singer_01_tv"
-            app:layout_constraintTop_toTopOf="@id/home_pannel_album_img_01_iv"/>
-
-        <TextView
-            android:id="@+id/home_pannel_album_singer_01_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="젠(zen)"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:layout_marginStart="15dp"
-            app:layout_constraintStart_toEndOf="@id/home_pannel_album_img_01_iv"
-            app:layout_constraintTop_toBottomOf="@id/home_pannel_album_title_01_tv"
-            app:layout_constraintBottom_toBottomOf="@id/home_pannel_album_img_01_iv"/>
-
-        <ImageView
-            android:id="@+id/home_pannel_album_img_02_iv"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/img_album_exp"
-            android:layout_marginStart="20dp"
-            android:layout_marginBottom="30dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="@id/home_pannel_background_iv"/>
-
-        <TextView
-            android:id="@+id/home_pannel_album_title_02_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="잠이 안온다"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:layout_marginStart="15dp"
-            app:layout_constraintStart_toEndOf="@id/home_pannel_album_img_02_iv"
-            app:layout_constraintBottom_toTopOf="@id/home_pannel_album_singer_02_tv"
-            app:layout_constraintTop_toTopOf="@id/home_pannel_album_img_02_iv"/>
-
-        <TextView
-            android:id="@+id/home_pannel_album_singer_02_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="젠(zen)"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:layout_marginStart="15dp"
-            app:layout_constraintStart_toEndOf="@id/home_pannel_album_img_02_iv"
-            app:layout_constraintTop_toBottomOf="@id/home_pannel_album_title_02_tv"
-            app:layout_constraintBottom_toBottomOf="@id/home_pannel_album_img_02_iv"/>
-
-        <TextView
             android:id="@+id/home_today_music_title_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -165,7 +60,7 @@
             android:textSize="18dp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/home_pannel_background_iv" />
+            app:layout_constraintTop_toBottomOf="@+id/home_pannel_01_vp" />
 
         <ImageView
             android:id="@+id/home_today_music_title_btn_iv"
@@ -187,31 +82,29 @@
             android:text="종합"
             android:textColor="#3F3FFF"
             android:textSize="16sp"
-            app:layout_constraintTop_toBottomOf="@+id/home_pannel_background_iv"
+            app:layout_constraintTop_toBottomOf="@+id/home_pannel_01_vp"
             app:layout_constraintEnd_toStartOf="@+id/home_today_music_domestic_tv"/>
 
         <TextView
             android:id="@+id/home_today_music_domestic_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:layout_marginEnd="20dp"
             android:text="국내"
             android:textColor="@color/black"
             android:textSize="16sp"
-            app:layout_constraintTop_toBottomOf="@+id/home_pannel_background_iv"
+            app:layout_constraintTop_toTopOf="@+id/home_today_music_total_tv"
             app:layout_constraintEnd_toStartOf="@+id/home_today_music_oversea_tv"/>
 
         <TextView
             android:id="@+id/home_today_music_oversea_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:layout_marginEnd="20dp"
             android:text="해외"
             android:textColor="@color/black"
             android:textSize="16sp"
-            app:layout_constraintTop_toBottomOf="@+id/home_pannel_background_iv"
+            app:layout_constraintTop_toTopOf="@+id/home_today_music_total_tv"
             app:layout_constraintEnd_toEndOf="parent"/>
 
         <HorizontalScrollView
@@ -233,6 +126,7 @@
                 android:orientation="horizontal">
 
                 <LinearLayout
+                    android:id="@+id/home_today_music_01_layout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
@@ -243,7 +137,7 @@
                         android:layout_height="wrap_content">
 
                         <ImageView
-                            android:id="@+id/home_album_img_iv1"
+                            android:id="@+id/home_today_music_album_01_iv"
                             android:layout_width="150dp"
                             android:layout_height="150dp"
                             android:scaleType="fitCenter"
@@ -265,14 +159,14 @@
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="LILAC"
                         android:textSize="16sp"
                         android:textColor="@color/black"
                         android:layout_marginTop="10dp"/>
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="아이유(IU)"
                         android:textSize="13sp"
@@ -282,59 +176,66 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/home_today_music_02_layout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:orientation="vertical">
 
                     <ImageView
+                        android:id="@+id/home_today_music_album_02_iv"
                         android:layout_width="150dp"
                         android:layout_height="150dp"
                         android:scaleType="fitCenter"
-                        android:src="@drawable/img_album_exp"/>
+                        android:src="@drawable/img_album_exp3"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Next Level"
+                        android:textSize="16sp"
+                        android:textColor="@color/black"
+                        android:layout_marginTop="10dp" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="제목"
-                        android:textSize="16sp"
-                        android:textColor="@color/black"
-                        android:layout_marginTop="10dp"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="가수명"
+                        android:text="aespa"
                         android:textSize="13sp"
                         android:textColor="#a8a8a8"
                         android:layout_marginTop="3dp"/>
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/home_today_music_03_layout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:orientation="vertical">
 
                     <ImageView
+                        android:id="@+id/home_today_music_album_03_iv"
                         android:layout_width="150dp"
                         android:layout_height="150dp"
                         android:scaleType="fitCenter"
-                        android:src="@drawable/img_album_exp"/>
+                        android:src="@drawable/img_album_exp4"/>
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="제목"
+                        android:text="작은 것들을 위한 시 (Boy With Luv)"
                         android:textSize="16sp"
                         android:textColor="@color/black"
                         android:layout_marginTop="10dp"/>
+
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="가수명"
+                        android:text="방탄소년단"
                         android:textSize="13sp"
                         android:textColor="#a8a8a8"
-                        android:layout_marginTop="3dp"/>
+                        android:layout_marginTop="3dp" />
+
                 </LinearLayout>
 
             </LinearLayout>
