--- a/app/src/main/res/layout/fragment_banner2.xml
+++ b/app/src/main/res/layout/fragment_banner2.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/banner_image_iv"
+        android:id="@+id/banner_image2_iv"
         android:layout_width="match_parent"
         android:layout_height="100dp"
+        android:src="@drawable/img_home_viewpager_exp2"
         android:scaleType="fitXY"
-        android:src="@drawable/img_home_viewpager_exp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
