--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,6 +74,7 @@
             android:gravity="center_vertical">
 
             <ImageView
+                android:id="@+id/main_miniplayer_before"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/btn_miniplayer_previous" />
@@ -93,12 +94,14 @@
 
 
             <ImageView
+                android:id="@+id/main_miniplayer_after"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/btn_miniplayer_next" />
 
 
             <ImageView
+                android:id="@+id/main_miniplayer_list"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:src="@drawable/btn_miniplayer_go_list"
