보관함 추가

--- a/app/src/main/res/layout/fragment_locker.xml
+++ b/app/src/main/res/layout/fragment_locker.xml
@@ -11,9 +11,9 @@
         android:layout_height="wrap_content"
         android:text="보관함"
         android:textColor="@color/black"
-        android:textSize="22sp"
+        android:textSize="25sp"
         android:textStyle="bold"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="55dp"
         android:layout_marginStart="20dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
@@ -33,7 +33,11 @@
         android:id="@+id/locker_content_tb"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
+        app:tabMaxWidth="140dp"
+        app:tabMode="scrollable"
+        app:tabPaddingStart="20dp"
+        app:tabPaddingEnd="20dp"
         app:tabIndicatorColor="@color/select_color"
         app:tabIndicatorFullWidth="false"
         app:tabSelectedTextColor="@color/select_color"
