--- a/app/src/main/res/layout/item_songs_title.xml
+++ b/app/src/main/res/layout/item_songs_title.xml
@@ -16,6 +16,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
+    <TextView
+        android:id="@+id/item_songs_rep_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TITLE"
+        android:textSize="11sp"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:background="@drawable/textview_background_select_color_radius"
+        android:paddingHorizontal="8dp"
+        android:paddingVertical="1dp"
+        android:layout_marginStart="15dp"
+        app:layout_constraintStart_toEndOf="@+id/item_songs_order_tv"
+        app:layout_constraintTop_toTopOf="@+id/item_songs_order_tv"
+        app:layout_constraintBottom_toBottomOf="@+id/item_songs_order_tv"/>
 
     <TextView
         android:id="@+id/item_songs_title_tv"
@@ -24,8 +39,8 @@
         android:text="라일락"
         android:textColor="@color/black"
         android:textSize="17sp"
-        android:layout_marginStart="15dp"
-        app:layout_constraintStart_toEndOf="@+id/item_songs_order_tv"
+        android:layout_marginStart="10dp"
+        app:layout_constraintStart_toEndOf="@+id/item_songs_rep_tv"
         app:layout_constraintTop_toTopOf="@+id/item_songs_order_tv"
         app:layout_constraintBottom_toBottomOf="@+id/item_songs_order_tv"/>
 
@@ -36,8 +51,9 @@
         android:text="아이유 (IU)"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
-        app:layout_constraintStart_toStartOf="@id/item_songs_title_tv"
-        app:layout_constraintTop_toBottomOf="@+id/item_songs_order_tv"
+        android:layout_marginStart="15dp"
+        app:layout_constraintStart_toEndOf="@id/item_songs_order_tv"
+        app:layout_constraintTop_toBottomOf="@+id/item_songs_rep_tv"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
     <ImageView
@@ -57,5 +73,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
+
+
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
