--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@id/main_bnv"
-        android:paddingVertical="5dp"
+        android:paddingBottom="5dp"
         android:background="#F9F9F9">
 
         <LinearLayout
