--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -68,7 +68,7 @@
             android:layout_marginEnd="5dp"
             android:text="오늘 발매 음악"
             android:textColor="@color/black"
-            android:textSize="18dp"
+            android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/home_pannel_tb" />
@@ -79,6 +79,7 @@
             android:layout_height="18dp"
             android:layout_marginEnd="5dp"
             android:scaleType="fitStart"
+            android:background="@color/white"
             android:src="@drawable/btn_main_arrow_more"
             app:layout_constraintStart_toEndOf="@+id/home_today_music_title_tv"
             app:layout_constraintTop_toTopOf="@+id/home_today_music_title_tv"
