--- a/app/src/main/res/layout/fragment_song.xml
+++ b/app/src/main/res/layout/fragment_song.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-    android:id="@+id/song_fragment"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,6 +10,7 @@
         android:id="@+id/album_songs_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,10 +19,11 @@
         <TextView
             android:id="@+id/album_songs_favorite_tv"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:text="내 취향 MIX"
             android:textColor="@color/black"
-            android:layout_marginTop="5dp"
+            android:paddingTop="5dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
@@ -30,9 +31,7 @@
             android:layout_width="50dp"
             android:layout_height="28dp"
             android:src="@drawable/btn_toggle_off"
-            app:layout_constraintTop_toTopOf="@id/album_songs_favorite_tv"
-            app:layout_constraintStart_toEndOf="@+id/album_songs_favorite_tv"
-            app:layout_constraintBottom_toBottomOf="@id/album_songs_favorite_tv" />
+            android:layout_marginStart="5dp" />
 
         <ImageView
             android:id="@+id/album_songs_toggle_on_iv"
