--- a/app/src/main/res/layout/item_save.xml
+++ b/app/src/main/res/layout/item_save.xml
@@ -28,7 +28,6 @@
 
     </androidx.cardview.widget.CardView>
 
-
     <LinearLayout
         android:id="@+id/item_save_information_ly"
         android:layout_width="wrap_content"
@@ -47,9 +46,7 @@
             android:textColor="@color/black"
             android:textSize="17sp"
             android:maxLines="1"
-            android:ellipsize="end"
-            app:layout_constraintStart_toEndOf="@id/item_save_cover_img_cardView"
-            app:layout_constraintTop_toTopOf="@id/item_save_cover_img_cardView" />
+            android:ellipsize="end" />
 
         <TextView
             android:id="@+id/item_save_singer_tv"
@@ -60,10 +57,7 @@
             android:textColor="#a8a8a8"
             android:textSize="14sp"
             android:maxLines="1"
-            android:ellipsize="end"
-            app:layout_goneMarginTop="3dp"
-            app:layout_constraintStart_toStartOf="@+id/item_save_title_tv"
-            app:layout_constraintTop_toBottomOf="@+id/item_save_title_tv" />
+            android:ellipsize="end" />
 
     </LinearLayout>
 
