--- a/app/src/main/res/layout/fragment_locker.xml
+++ b/app/src/main/res/layout/fragment_locker.xml
@@ -34,6 +34,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
+        app:tabMode="scrollable"
         app:tabMaxWidth="140dp"
         app:tabPaddingStart="20dp"
         app:tabPaddingEnd="20dp"
